# calculator

./: .gitlab-ci.yml  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
calculator/: __init__.py  interpreter.py  lexer.py  nodes.py  parser_.py  tokens.py  values.py
tests/: test_interpreter.py  test_lexer.py  test_parser.py
